--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,3 +1,35 @@
+# ---
+# name: Checks
+
+# on: [push]
+
+# jobs:
+#   test-lint:
+#     name: Test and Lint
+#     runs-on: ubuntu-20.04
+#     # operating system to run the job on - basic Linux OS; docker-compose comes pre-installed
+#     steps:
+#     # different steps that run 
+#       - name: Login to Docker Hub
+#         uses: docker/login-action@v1
+#         # uses a pre-made github actions in the Github actions repository
+#         # this action is used to login to docker 
+#         with:
+#           username: ${{ secrets.DOCKERHUB_USER }}
+#           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+#       - name: Checkout
+#         uses: actions/checkout@v2
+#       # generic github action that checkouts code inside github actions job because
+#       # by default the code is not checkedout by default
+
+#       - name: Test
+#         uses: docker-compose run --rm app sh -c "python manage.py test"
+#       # runs unit test for project
+
+#       - name: Lint
+#         run: docker-compose run --rm app sh -c "flake8"
+
 ---
 name: Checks
 
@@ -7,25 +39,15 @@ jobs:
   test-lint:
     name: Test and Lint
     runs-on: ubuntu-20.04
-    # operating system to run the job on - basic Linux OS; docker-compose comes pre-installed
     steps:
-    # different steps that run 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
-        # uses a pre-made github actions in the Github actions repository
-        # this action is used to login to docker 
         with:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
       - name: Checkout
         uses: actions/checkout@v2
-      # generic github action that checkouts code inside github actions job because
-      # by default the code is not checkedout by default
-
       - name: Test
-        uses: docker-compose run --rm app sh -c "python manage.py test"
-      # runs unit test for project
-
+        run: docker-compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test"
       - name: Lint
         run: docker-compose run --rm app sh -c "flake8"
